add operation history

--- a/application/views/data/components/data-table.pug
+++ b/application/views/data/components/data-table.pug
@@ -11,8 +11,9 @@
             th Coletor
             th Criado em
             th Preço
+            th Ações
         tbody
-          each data in datas
+          each data, index in datas
             tr
               td
                 = data.type
@@ -24,3 +25,17 @@
                 = data.created_at
               td
                 = data.price
+              td
+                a.btn.btn-info.btn-sm.btn-circle.mr-2(
+                  data-toggle="tooltip" data-placement="top" title="Ver Detalhes" href="/data/" + data.id
+                )
+                  i.fas.fa-eye
+                a.btn.btn-secondary.btn-sm.btn-circle.mr-2(
+                  data-toggle="tooltip" data-placement="top" title="Ver Histórico" href="/data/" + data.id + "/list-operations"
+                )
+                  i.fas.fa-history
+                a.btn.btn-primary.btn-sm.btn-circle.mr(
+                  data-placement="top" title="Comprar" data-toggle="modal" data-target="#buyModal"+index  href='#'
+                )
+                  i.fas.fa-shopping-cart
+            include buy-modal.pug
