--- a/application/views/data/list-operations.pug
+++ b/application/views/data/list-operations.pug
@@ -5,8 +5,8 @@ block append header
 
 block content
   .container-fluid
-    h1.mb-4 Listar Dados
-    include components/data-table.pug
+    h1.mb-4 Histórico de Operações
+    include components/operation-table.pug
 
 
 block append scripts
