--- a/application/views/layout/layout.pug
+++ b/application/views/layout/layout.pug
@@ -26,3 +26,4 @@ body
     script(src='/vendor/bootstrap-theme/vendor/jquery-easing/jquery.easing.min.js')
     // Custom scripts for all pages
     script(src='/vendor/bootstrap-theme/js/sb-admin-2.min.js')
+    script(src='/js/document.js')
