--- a/application/views/processor/index.pug
+++ b/application/views/processor/index.pug
@@ -16,6 +16,6 @@ block content
 
 
 block append scripts
-  script(src='vendor/bootstrap-theme/vendor/datatables/jquery.dataTables.min.js')
-  script(src='vendor/bootstrap-theme/vendor/datatables/dataTables.bootstrap4.min.js')
-  script(src='js/datatable.js')
+  script(src='/vendor/bootstrap-theme/vendor/datatables/jquery.dataTables.min.js')
+  script(src='/vendor/bootstrap-theme/vendor/datatables/dataTables.bootstrap4.min.js')
+  script(src='/js/datatable.js')
