--- a/application/views/processor/show.pug
+++ b/application/views/processor/show.pug
@@ -10,17 +10,17 @@ block content
       .card-body
         form
           .form-group
-            label.small.mb-1(for='name') Nome
+            label.mb-1(for='name') Nome
             input#name.form-control(disabled type='text' value= processor.name)
           .form-group
-            label.small.mb-1(for='organization') Organização
+            label.mb-1(for='organization') Organização
             input#organization.form-control(disabled type='text' value= processor.organization)
           .form-row
             .form-group.col-md-6
-              label.small.mb-1(for='id') ID
+              label.mb-1(for='id') ID
               input#id.form-control(disabled type='text'  value=processor.id)
             .form-group.col-md-6
-              label.small.mb-1(for='created_at') Criado em
+              label.mb-1(for='created_at') Criado em
               input#id.form-control(disabled type='text'  value=processor.created_at)
 
 
