--- a/application/views/data/components/data-show-form.pug
+++ b/application/views/data/components/data-show-form.pug
@@ -1,4 +1,10 @@
 form
+  if (data.process_request_id)
+    .form-group
+      label.mb-1(for='process_request_id') Id da Solicitação de processamento
+      div
+        a(href='/process-request/' + data.process_request_id)
+          = data.process_request_id
   .form-row
     .form-group.col-md-6
       label.mb-1(for='type') Tipo
@@ -15,20 +21,26 @@ form
   .form-group
     label.mb-1(for='collector') Coletor
     input#collector.form-control(disabled type='text' value= data.collector)
-  if (data.processor)
-    .form-group
-      label.mb-1(for='processor') Processador
-      input#processor.form-control(disabled type='text' value= data.processor)
   .form-group
     label.mb-1(for='conditions') Condições
     input#conditions.form-control(disabled type='text' value= data.conditions)
   .form-group
     label.mb-1(for='owners') Donos
     input#owners.form-control(disabled type='text' value= data.owners)
+  .form-group
+    label.mb-1(for='magnet_link') Link Magnético do dado
+    input#owners.form-control(disabled type='text' value= data.magnet_link)
   .form-row
     .form-group.col-md-6
       label.mb-1(for='price') Preço
-      input#price.form-control(disabled type='text'  value=data.price)
+      input#price.form-control(disabled type='text' value=data.price)
+    .form-group.col-md-6
+      label.mb-1(for='process_reward') Recompensa por processamento
+      input#process_reward.form-control(disabled type='text' value=data.process_reward)
+  .form-row
     .form-group.col-md-6
       label.mb-1(for='created_at') Criado em
-      input#created_at.form-control(disabled type='text'  value=data.created_at)
+      input#created_at.form-control(disabled type='text' value=data.created_at)
+    .form-group.col-md-6
+      label.mb-1(for='status') Status
+      input#status.form-control(disabled type='text' value=data.status)
