--- a/application/views/data/processed-data-new.pug
+++ b/application/views/data/processed-data-new.pug
@@ -1,1 +1,34 @@
-| processed-data-new.pug
+extends ../layout/layout.pug
+
+block append header
+
+block content
+  .card.o-hidden.border-0.shadow-lg.my-5.ml-5.mr-5
+    .card-body.p-0
+      // Nested Row within Card Body
+      .row
+        .col-lg-12
+          .p-5
+            .text-center
+              h1.h4.text-gray-900.mb-4 Enviar um dado Processado de DNA
+              p.mb-4
+            form.user(action='/data/processed-data-create' method='post')
+              .form-group
+                label(for='process_request_id') Id da solicitação de processamento (Se houver)
+                input#process_request_id.form-control.form-control-user(name='process_request_id' type='text')
+              .form-group
+                label(for='name') Nome
+                input#name.form-control.form-control-user(name='name' type='text')
+              .form-group
+                label(for='description') Descrição
+                textarea#exampleFormControlTextarea1.form-control(name='description' rows='3' type = 'text')
+              .form-group
+                label(for='magnet_link') Link Magnético dos dados
+                input#magnet_link.form-control.form-control-user(name='magnet_link' type='text')
+              hr
+              .float-right.mb-4.inline-block
+                a.btn.btn-danger.btn-user.mr-3.px-5(href='/data')
+                  | Cancelar
+                input.btn.btn-primary.btn-user.px-5(type='submit' value='Adicionar')
+
+block append scripts
