--- a/application/views/processRequest/show.pug
+++ b/application/views/processRequest/show.pug
@@ -29,7 +29,9 @@ block content
               input#raw_data_title.form-control(disabled type='text' value= processRequest.raw_data.title)
             .form-group.col-md-6
               label.mb-1(for='raw_data_id') Id do Dado Bruto
-              input#raw_data_id.form-control(disabled type='text' value= processRequest.raw_data_id)
+              div.mt-2
+                a(href='/data/' + processRequest.raw_data_id)
+                  = processRequest.raw_data_id
 
           if (processRequest.processor)
             hr
@@ -41,7 +43,9 @@ block content
                 input#processor_name.form-control(disabled type='text' value= processRequest.processor.name)
               .form-group.col-md-6
                 label.mb-1(for='processor_id') Id do Processador
-                input#processor_id.form-control(disabled type='text' value= processRequest.processor_id)
+                div.mt-2
+                  a(href='/processor/' + processRequest.processor_id)
+                    = processRequest.processor_id
 
           if (processRequest.processed_data)
             hr
@@ -52,7 +56,9 @@ block content
                 input#processed_data_title.form-control(disabled type='text' value= processRequest.processed_data.title)
               .form-group.col-md-6
                 label.mb-1(for='processed_data_id') Id do Dado Processado
-                input#processed_data_id.form-control(disabled type='text' value= processRequest.processed_data_id)
+                div.mt-2
+                  a(href='/data/' + processRequest.processed_data_id)
+                    = processRequest.processed_data_id
 
 
 block append scripts
