--- a/application/views/operation/show.pug
+++ b/application/views/operation/show.pug
@@ -39,8 +39,8 @@ block content
                     label.mb-1(for='price') Preço
                     input#price.form-control(disabled type='text'  value=operation.details.price)
                   .form-group.col-md-6
-                    label.mb-1(for='seller') Vendedor
-                    input#seller.form-control(disabled type='text'  value=operation.details.seller)
+                    label.mb-1(for='contractId') Id do Smart Contract
+                    input#contractId.form-control(disabled type='text'  value=operation.details.contractId)
 
 
 block append scripts
