show my account

--- a/application/views/layout/navbar.pug
+++ b/application/views/layout/navbar.pug
@@ -105,7 +105,7 @@ nav.navbar.navbar-expand.navbar-light.bg-white.topbar.mb-4.static-top.shadow
         img.img-profile.rounded-circle(src='https://source.unsplash.com/QAB-WJcbgJk/60x60')
       // Dropdown - User Information
       .dropdown-menu.dropdown-menu-right.shadow.animated--grow-in(aria-labelledby='userDropdown')
-        a.dropdown-item(href='#')
+        a.dropdown-item(href='/account/show-my-account')
           i.fas.fa-user.fa-sm.fa-fw.mr-2.text-gray-400
           |                   Profile
         a.dropdown-item(href='#')
