--- a/application/views/dnaContract/show.pug
+++ b/application/views/dnaContract/show.pug
@@ -9,6 +9,7 @@ block content
       .card-header.card-header.d-flex.justify-content-between.align-items-center Smart Contract
         div 
           a.btn.btn-primary.btn-sm.text-white(data-toggle="modal" data-target="#buyModal" title="Comprar o dado")
+            i.fas.fa-shopping-cart.mr-2
             | Comprar o dado
       .card-body
         form
