add buy dna flow in frontend

--- a/application/views/data/components/operation-table.pug
+++ b/application/views/data/components/operation-table.pug
@@ -20,7 +20,7 @@
               td
                 = operation.type
               td
-                = operation.user
+                = operation.userAddress
               td
                 = operation.id
               td
