--- a/application/views/data/components/data-show-form.pug
+++ b/application/views/data/components/data-show-form.pug
@@ -1,3 +1,40 @@
+//- form
+//-   if (data.process_request_id)
+//-     .form-group
+//-       label.mb-1(for='process_request_id') Id da Solicitação de processamento
+//-       div
+//-         a(href='/process-request/' + data.process_request_id)
+//-           = data.process_request_id
+//-   .form-row
+//-     .form-group.col-md-6
+//-       label.mb-1(for='type') Tipo
+//-       input#type.form-control(disabled type='text'  value=data.type)
+//-     .form-group.col-md-6
+//-       label.mb-1(for='id') ID do dado
+//-       input#id.form-control(disabled type='text'  value=data.id)
+//-   .form-group
+//-     label.mb-1(for='title') Título
+//-     input#title.form-control(disabled type='text' value= data.title)
+//-   .form-group
+//-     label.mb-1(for='description') Descrição
+//-     input#description.form-control(disabled type='text' value= data.description)
+//-   .form-group
+//-     label.mb-1(for='collector') Coletor
+//-     input#collector.form-control(disabled type='text' value= data.collector)
+//-   .form-group
+//-     label.mb-1(for='owners') Donos
+//-     input#owners.form-control(disabled type='text' value= data.owners)
+//-   .form-group
+//-     label.mb-1(for='magnet_link') Link Magnético do dado
+//-     input#owners.form-control(disabled type='text' value= data.magnet_link)
+//-   .form-row
+//-     .form-group.col-md-6
+//-       label.mb-1(for='created_at') Criado em
+//-       input#created_at.form-control(disabled type='text' value=data.created_at)
+//-     .form-group.col-md-6
+//-       label.mb-1(for='status') Status
+//-       input#status.form-control(disabled type='text' value=data.status)
+
 form
   if (data.process_request_id)
     .form-group
@@ -7,29 +44,29 @@ form
           = data.process_request_id
   .form-row
     .form-group.col-md-6
-      label.mb-1(for='type') Tipo
+      label.mb-1(for='type') Type
       input#type.form-control(disabled type='text'  value=data.type)
     .form-group.col-md-6
-      label.mb-1(for='id') ID do dado
+      label.mb-1(for='id') Data Id
       input#id.form-control(disabled type='text'  value=data.id)
   .form-group
-    label.mb-1(for='title') Título
+    label.mb-1(for='title') Title
     input#title.form-control(disabled type='text' value= data.title)
   .form-group
-    label.mb-1(for='description') Descrição
+    label.mb-1(for='description') Description
     input#description.form-control(disabled type='text' value= data.description)
   .form-group
-    label.mb-1(for='collector') Coletor
+    label.mb-1(for='collector') Collector
     input#collector.form-control(disabled type='text' value= data.collector)
   .form-group
-    label.mb-1(for='owners') Donos
+    label.mb-1(for='owners') Owners
     input#owners.form-control(disabled type='text' value= data.owners)
   .form-group
-    label.mb-1(for='magnet_link') Link Magnético do dado
+    label.mb-1(for='magnet_link') Data's Magnetic Link
     input#owners.form-control(disabled type='text' value= data.magnet_link)
   .form-row
     .form-group.col-md-6
-      label.mb-1(for='created_at') Criado em
+      label.mb-1(for='created_at') Created At
       input#created_at.form-control(disabled type='text' value=data.created_at)
     .form-group.col-md-6
       label.mb-1(for='status') Status
