--- a/application/views/data/show.pug
+++ b/application/views/data/show.pug
@@ -1,24 +1,51 @@
+//- extends ../layout/layout.pug
+
+//- block append header
+
+//- block content
+//-   .container.mt-4
+//-     h1 Detalhes do Dado
+//-     .card.mb-4
+//-       .card-header.d-flex.justify-content-between.align-items-center
+//-         | Dado
+//-         div
+//-           if(dnaContract)
+//-             a.btn.btn-primary.btn-sm.mr-4(href='/dnaContract/'+ dnaContract.id)
+//-               | Ver smart contract
+//-           else 
+//-             a.btn.btn-danger.btn-sm.mr-4(href='/dnaContract/new/'+data.id)
+//-               | Criar smart Contract
+//-           a.btn.btn-primary.btn-sm.mr-4(href='/process-request?search='+data.key)
+//-             | Ver solicitações de processamento
+//-           a.btn.btn-secondary.btn-sm(href=data.key+'/list-operations')
+//-             | Ver Histórico de Operações
+//-       .card-body
+//-         include components/data-show-form.pug
+
+
+//- block append scripts
+
 extends ../layout/layout.pug
 
 block append header
 
 block content
   .container.mt-4
-    h1 Detalhes do Dado
+    h1 Show Data
     .card.mb-4
       .card-header.d-flex.justify-content-between.align-items-center
-        | Dado
+        | Data
         div
           if(dnaContract)
             a.btn.btn-primary.btn-sm.mr-4(href='/dnaContract/'+ dnaContract.id)
-              | Ver smart contract
+              | See Smart Contract
           else 
             a.btn.btn-danger.btn-sm.mr-4(href='/dnaContract/new/'+data.id)
-              | Criar smart Contract
+              | Create Smart Contract
           a.btn.btn-primary.btn-sm.mr-4(href='/process-request?search='+data.key)
-            | Ver solicitações de processamento
+            | See Processing Request
           a.btn.btn-secondary.btn-sm(href=data.key+'/list-operations')
-            | Ver Histórico de Operações
+            | See History Operation
       .card-body
         include components/data-show-form.pug
 
