format mask money

--- a/application/views/account/show.pug
+++ b/application/views/account/show.pug
@@ -19,10 +19,27 @@ block content
           .form-row
             .form-group.col-md-6
               label.mb-1(for='balance') Saldo
-              input#balance.form-control(disabled type='text' value= account.balance)
+              input#balance.form-control.bio-money(disabled type='text' value= account.balance)
             .form-group.col-md-6
               label.mb-1(for='created_at') Criado em
               input#id.form-control(disabled type='text'  value=account.created_at)
-
+        .card-header Available Tokens
+        .card-body
+          each token, index in account.tokens 
+            form
+              .form-row
+                .form-group.col-md-3
+                  label.mb-1(for='type') Type
+                  input#type.form-control(disabled type='text' value= token.type)
+                .form-group.col-md-3
+                  label.mb-1(for='value') Value
+                  input#value.form-control.bio-money(disabled type='text'  value=token.value)
+                .form-group.col-md-3
+                  label.mb-1(for='payment-intention-id') PaymentIntentionId
+                  input#payment-intention-id.form-control(disabled type='text' value= token.payment_intention_id)
+                .form-group.col-md-3
+                  label.mb-1(for='expiration-date') Expiration Date
+                  input#expiration_date.form-control(disabled type='text'  value=token.expiration_date)
+            
 
 block append scripts
