--- a/application/views/dnaContract/new.pug
+++ b/application/views/dnaContract/new.pug
@@ -20,7 +20,7 @@ block content
                 .card-body
                   .form-group 
                     label.mb-1(for='price') Preço
-                    input#price.form-control(name='price' type='text' )
+                    input#price.form-control.bio-money-input(name='price' type='text')
               hr
               .float-right.mb-4.inline-block
                 a.btn.btn-danger.btn-user.mr-3.px-5(href='/dnaContract')
