--- a/application/views/dnaContract/show.pug
+++ b/application/views/dnaContract/show.pug
@@ -28,7 +28,7 @@ block content
             .card-body
               .form-group 
                 label.mb-1(for='price') Preço
-                input#price.form-control(disabled type='text'  value=dnaContract.parameters.price)
+                input#price.form-control.bio-money(disabled type='text'  value=dnaContract.parameters.price)
   include components/buy-modal.pug
 
 
