--- a/application/views/layout/layout.pug
+++ b/application/views/layout/layout.pug
@@ -6,6 +6,7 @@ block header
     title Biobank
     link(href='/vendor/bootstrap-theme/vendor/fontawesome-free/css/all.min.css' rel='stylesheet' type='text/css')
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh' crossorigin='anonymous')
+    script(src='/vendor/bootstrap-theme/vendor/jquery/jquery.min.js')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6' crossorigin='anonymous')
     link(rel='stylesheet', href='/vendor/bootstrap-theme/css/sb-admin-2.min.css')
     link(rel='stylesheet', href='/css/style.css')
@@ -20,10 +21,15 @@ body
 
   block scripts
     // Bootstrap core JavaScript
-    script(src='/vendor/bootstrap-theme/vendor/jquery/jquery.min.js')
+    
     script(src='/vendor/bootstrap-theme/vendor/bootstrap/js/bootstrap.bundle.min.js')
+    
     // Core plugin JavaScript
     script(src='/vendor/bootstrap-theme/vendor/jquery-easing/jquery.easing.min.js')
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js")
+
+
     // Custom scripts for all pages
     script(src='/vendor/bootstrap-theme/js/sb-admin-2.min.js')
+    
     script(src='/js/document.js')
