--- a/application/views/layout/sidebar.pug
+++ b/application/views/layout/sidebar.pug
@@ -46,7 +46,7 @@ ul#accordionSidebar.navbar-nav.bg-gradient-primary.sidebar.sidebar-dark.accordio
   li.nav-item
     a.nav-link(href='/processable-data')
       i.fas.fa-cogs
-      span Processing Data
+      span Process Data
   li.nav-item
     a.nav-link(href='/process-request')
       i.fas.fa-fw.fa-file-invoice
