--- a/application/views/processRequest/show.pug
+++ b/application/views/processRequest/show.pug
@@ -6,7 +6,12 @@ block content
   .container.mt-4
     h1 Detalhes da Solicitação
     .card.mb-4
-      .card-header Solicitação de Processamento
+      .card-header.d-flex.justify-content-between.align-items-center
+        | Solicitação de Processamento
+        if(processRequest.status != "Processado")
+          a.btn.btn-primary.btn-sm.mr-4(href='/data/processed-data-new/?processRequest=' + processRequest.id)
+            | Insert Processed DNA
+            
       .card-body
         form
           .form-row
