dna contract masks

--- a/application/views/dnaContract/components/buy-modal.pug
+++ b/application/views/dnaContract/components/buy-modal.pug
@@ -6,7 +6,7 @@
         button.close(type='button' data-dismiss='modal' aria-label='Close')
           span(aria-hidden='true') &times;
       .modal-body Clique em &quot;Comprar&quot; abaixo para confirmar a compra por 
-        = dnaContract.parameters.price
+        = dnaContract.raw_dna_price
         |  moedas
       .modal-footer
         button.btn.btn-secondary(type='button' data-dismiss='modal') Cancelar
