--- a/application/views/dnaContract/new.pug
+++ b/application/views/dnaContract/new.pug
@@ -13,14 +13,45 @@ block content
               p.mb-4 Um Smart Contract é responsável por definir as condições de venda do DNA
             form.user(action='/dnaContract/new' method='post')
               .form-group
-                label.mb-1(for='dnaId') ID do DNA correspondente
+                label.mb-1(for='dnaId') DNA ID
                 input#dnaId.form-control(readonly name='dnaId' type='text' value=dnaId)
-              .card
-                .card-header Detalhes
+              .form-group 
+                label.mb-1(for='raw_data_price') Raw Data Price
+                input#price.form-control.bio-money-input(name='raw_data_price' type='text')
+              .card.mb-3
+                .card-header Payment Distribution (in percentage)
                 .card-body
-                  .form-group 
-                    label.mb-1(for='price') Preço
-                    input#price.form-control.bio-money-input(name='price' type='text')
+                  .form-row
+                    .form-group.col-md-3
+                      label.mb-1(for='price') Collector
+                      input#price.form-control.percentage(name='payment_distribution[collector]' type='text')
+                    .form-group.col-md-3
+                      label.mb-1(for='price') Processor 
+                      input#price.form-control.percentage(name='payment_distribution[processor]' type='text')
+                    .form-group.col-md-3 
+                      label.mb-1(for='price') Validators
+                      input#price.form-control.percentage(name='payment_distribution[validators]' type='text')
+                    .form-group.col-md-3
+                      label.mb-1(for='price') Curator
+                      input#price.form-control.percentage(name='payment_distribution[curator]' type='text')
+              .card
+                .card-header Royalty Payments
+                .card-body
+                  .form-row
+                    .form-group.col-md-4
+                      label.mb-1(for='price') Type
+                      //- input#price.form-control.bio-money-input(name='price' type='text')
+                      select#custom-select.form-control.dropdown-toggle(name='royalty_payments[0][type]' type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                          option(value='no_royalties' selected=true) No Royalties
+                          option(value='fixed_one_time_fee') Fixed One Time Fee 
+                          option(value='proportional_one_time_fee') Proportional One Time Fee
+                          option(value='fixed_periodic_fee') Fixed Periodic Fee
+                          option(value='proportional_periodic_fee') Proportional Periodic Fee
+                          option(value='profit_proportional_periodic_fee') Profit Proportional Periodic Fee
+                    .form-group.col-md-2
+                      label.mb-1(for='value') Value 
+                      input#price.form-control(name='royalty_payments[0][value]' type='text')
+              
               hr
               .float-right.mb-4.inline-block
                 a.btn.btn-danger.btn-user.mr-3.px-5(href='/dnaContract')
