--- a/application/views/layout/layout.pug
+++ b/application/views/layout/layout.pug
@@ -6,10 +6,14 @@ block header
     title Biobank
     link(href='/vendor/bootstrap-theme/vendor/fontawesome-free/css/all.min.css' rel='stylesheet' type='text/css')
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh' crossorigin='anonymous')
+    
     script(src='/vendor/bootstrap-theme/vendor/jquery/jquery.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6' crossorigin='anonymous')
+
     link(rel='stylesheet', href='/vendor/bootstrap-theme/css/sb-admin-2.min.css')
     link(rel='stylesheet', href='/css/style.css')
+    
 
 body
   #wrapper
