--- a/application/views/data/index.pug
+++ b/application/views/data/index.pug
@@ -5,7 +5,7 @@ block append header
 
 block content
   .container-fluid
-    h1.mb-4 Listar Dados
+    h1.mb-4 List Data
     include components/data-table.pug
 
 
